# TheShopkeepersQuest

./: .gitignore  CONTRIBUTING.rst  README.md  SteamedHams.py  TODO.md  TheShopKeepersQuest.py  TheShopkeepersQuest.py  adventure-clone.py  example.py  game.py  greatestandbestengineintheworld.py  justfile  pyproject.toml  requirements-dev.txt  requirements.txt  shm.py  title.py
docs/: gamefile_format.rst  getting_started.rst  index.rst  room_format.rst  save_format.rst
src/: TODO.md  TheShopKeepersQuest.py  TheShopkeepersQuest.py  __init__.py  __main__.py  battle.py  box.py  cli_info.toml  curses.py  engine_info.py  engine_info.toml  game.py  game.toml  game_info.toml  save_handler.py  shm.py  title.py  toml_reader.py  tomlconverter.py  tui.py
src/shm/: README.md  pyproject.toml
src/shm/src/shm/: __init__.py  __main__.py  battle.py  engine.py  engine_info.toml  save_handler.py  toml_reader.py  tomlconverter.py  tui.py
src/shm/src/shm/typing/: __init__.py  format_dict.py  game_state.py  restrictedscr.py  room.py  typeddicts.py
src/tsq/: README.md  __main__.py  cli_info.toml  game.py  pyproject.toml  title.py
src/tsq/src/tsq/: __main__.py  cli_info.toml  game.py  game.toml  title.py
src/typing/: __init__.py  box.py  format_dict.py  room.py  typeddicts.py  typedicts.py
