[project]
name = "TheShopkeepersQuest"
version = "1.2-dev2"
description = "The Shopkeeper's Quest - an open-source, text-based adventure game."
license = "MIT"
license-files = ["LICEN[CS]E*"]
requires-python = ">= 3.11"
readme = "README.md"
keywords = ["adventure", "game", "tsq", "shm"]
dependencies = [
    "windows-curses; platform_system == 'Windows'",
]
authors = [
  {name = "SolidLamp"},
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console :: Curses",
  "Intended Audience :: End Users/Desktop",
  "License :: OSI Approved :: MIT License",
  "Natural Language :: English",
  "Topic :: Games/Entertainment",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
]

[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"



